update seller&customer
